--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.76.1",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.9.0",
